--- a/lang/stripe_en_US.po
+++ b/lang/stripe_en_US.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-07-12 13:36+0200\n"
-"PO-Revision-Date: 2025-07-12 13:36+0200\n"
+"POT-Creation-Date: 2025-07-15 16:34+0200\n"
+"PO-Revision-Date: 2025-07-15 16:34+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
 "Language: en_US\n"
@@ -35,8 +35,8 @@ msgstr "An error occured saving stripe settings."
 
 #: ../lib/GaletteStripe/Controllers/StripeController.php:205
 #: ../lib/GaletteStripe/Controllers/StripeController.php:315
-msgid "Stripe payment"
-msgstr "Stripe payment"
+msgid "Online payment"
+msgstr "Online payment"
 
 #: ../lib/GaletteStripe/Controllers/StripeController.php:213
 msgid ""
@@ -137,8 +137,8 @@ msgid "URL"
 msgstr "URL"
 
 #: ../tempcache/stripe_form_amount.html.twig:238
-msgid "Pay with Stripe"
-msgstr "Pay with Stripe"
+msgid "Proceed to payment"
+msgstr "Proceed to payment"
 
 #: ../tempcache/stripe_form_amount.html.twig:254
 msgid "No payment reasons are available."
