--- a/lang/stripe_fr_FR.utf8.po
+++ b/lang/stripe_fr_FR.utf8.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-07-15 16:28+0200\n"
-"PO-Revision-Date: 2025-07-15 16:34+0200\n"
+"POT-Creation-Date: 2025-08-08 09:41+0200\n"
+"PO-Revision-Date: 2025-08-08 09:46+0200\n"
 "Last-Translator: Guillaume AGNIERAY <dev@agnieray.net>\n"
 "Language-Team: \n"
 "Language: fr_FR\n"
@@ -18,29 +18,11 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 "X-Generator: Poedit 3.2.2\n"
 
-#: ../lib/GaletteStripe/Controllers/StripeController.php:80
-msgid "Stripe Settings"
-msgstr "Préférences Stripe"
-
-#: ../lib/GaletteStripe/Controllers/StripeController.php:134
-msgid "You have to select a currency."
-msgstr "Vous devez sélectionner une devise."
-
-#: ../lib/GaletteStripe/Controllers/StripeController.php:141
-msgid "Stripe settings have been saved."
-msgstr "Les préférences Stripe ont été sauvegardées."
-
-#: ../lib/GaletteStripe/Controllers/StripeController.php:147
-msgid "An error occured saving stripe settings."
-msgstr ""
-"Une erreur est survenue lors de l'enregistrement des préférences stripe."
-
-#: ../lib/GaletteStripe/Controllers/StripeController.php:205
-#: ../lib/GaletteStripe/Controllers/StripeController.php:315
+#: ../lib/GaletteStripe/Controllers/StripeController.php:74
 msgid "Online payment"
 msgstr "Paiement en ligne"
 
-#: ../lib/GaletteStripe/Controllers/StripeController.php:213
+#: ../lib/GaletteStripe/Controllers/StripeController.php:82
 msgid ""
 "<strong>Payment could not work</strong>: An error occurred (that has been "
 "logged) while loading Stripe settings from the database.<br/>Please report "
@@ -50,11 +32,11 @@ msgstr ""
 "enregistrée) est survenue lors du chargement des préférences Stripe depuis "
 "la base de données.<br/>Merci de rapporter ce problème aux membres du bureau."
 
-#: ../lib/GaletteStripe/Controllers/StripeController.php:214
+#: ../lib/GaletteStripe/Controllers/StripeController.php:83
 msgid "Our apologies for the annoyance."
 msgstr "Toutes nos excuses pour le désagrément."
 
-#: ../lib/GaletteStripe/Controllers/StripeController.php:221
+#: ../lib/GaletteStripe/Controllers/StripeController.php:90
 msgid ""
 "Stripe keys have not been defined. Please ask an administrator to add them "
 "in the plugin's settings."
@@ -62,8 +44,8 @@ msgstr ""
 "Les clés Stripe n'ont pas été configurées. Veuillez demander à un "
 "administrateur de les ajouter à partir des préférences du plugin."
 
-#: ../lib/GaletteStripe/Controllers/StripeController.php:259
-#: ../tempcache/stripe_form_amount.html.twig:311
+#: ../lib/GaletteStripe/Controllers/StripeController.php:128
+#: ../tempcache/stripe_form.html.twig:258
 msgid ""
 "The amount you've entered is lower than the minimum amount for the selected "
 "option. Please choose another option or change the amount."
@@ -71,14 +53,39 @@ msgstr ""
 "Le montant que vous avez entré est inférieur au montant minimum de l'option "
 "sélectionnée. Veuillez choisir une autre option ou entrer un nouveau montant."
 
-#: ../lib/GaletteStripe/Controllers/StripeController.php:303
+#: ../lib/GaletteStripe/Controllers/StripeController.php:150
 msgid "An error occured loading the checkout form."
 msgstr "Une erreur est survenue lors du chargement du formulaire de paiement."
 
-#: ../lib/GaletteStripe/Controllers/StripeController.php:547
+#: ../lib/GaletteStripe/Controllers/StripeController.php:207
 #: ../lib/GaletteStripe/PluginGaletteStripe.php:62
 msgid "Stripe History"
 msgstr "Historique Stripe"
+
+#: ../lib/GaletteStripe/Controllers/StripeController.php:275
+msgid "Stripe Settings"
+msgstr "Préférences Stripe"
+
+#: ../lib/GaletteStripe/Controllers/StripeController.php:329
+msgid "You have to select a currency."
+msgstr "Vous devez sélectionner une devise."
+
+#: ../lib/GaletteStripe/Controllers/StripeController.php:336
+msgid "Stripe settings have been saved."
+msgstr "Les préférences Stripe ont été sauvegardées."
+
+#: ../lib/GaletteStripe/Controllers/StripeController.php:342
+msgid "An error occured saving stripe settings."
+msgstr ""
+"Une erreur est survenue lors de l'enregistrement des préférences stripe."
+
+#: ../lib/GaletteStripe/Controllers/StripeController.php:549
+msgid "Payment success"
+msgstr "Paiement effectué"
+
+#: ../lib/GaletteStripe/Controllers/StripeController.php:573
+msgid "Your payment has been aborted!"
+msgstr "Votre paiement a été annulé !"
 
 #: ../lib/GaletteStripe/PluginGaletteStripe.php:54
 msgid "Stripe"
@@ -89,115 +96,59 @@ msgstr "Stripe"
 msgid "Payment form"
 msgstr "Formulaire de paiement"
 
-#: ../tempcache/stripe_form_amount.html.twig:71
-msgid "Payment reason"
-msgstr "Motif de paiement"
-
-#: ../tempcache/stripe_form_amount.html.twig:78
-msgid "Select an payment reason"
-msgstr "Sélectionnez un motif de paiement"
-
-#: ../tempcache/stripe_form_amount.html.twig:182
-#: ../tempcache/stripe_form_checkout.html.twig:81
-msgid "Billing details"
-msgstr "Informations de facturation"
-
-#: ../tempcache/stripe_form_amount.html.twig:191
-msgid "First name"
-msgstr "Prénom"
-
-#: ../tempcache/stripe_form_amount.html.twig:194
-msgid "Name"
-msgstr "Nom"
-
-#: ../tempcache/stripe_form_amount.html.twig:197
-msgid "Email"
-msgstr "Email"
-
-#: ../tempcache/stripe_form_amount.html.twig:200
-msgid "Company"
-msgstr "Société"
-
-#: ../tempcache/stripe_form_amount.html.twig:206
-msgid "Address"
-msgstr "Adresse"
-
-#: ../tempcache/stripe_form_amount.html.twig:209
-msgid "Zip code"
-msgstr "Code postal"
-
-#: ../tempcache/stripe_form_amount.html.twig:212
-msgid "City"
-msgstr "Ville"
-
-#: ../tempcache/stripe_form_amount.html.twig:215
-msgid "Country"
-msgstr "Pays"
-
-#: ../tempcache/stripe_form_amount.html.twig:218
-msgid "URL"
-msgstr "URL"
-
-#: ../tempcache/stripe_form_amount.html.twig:238
-msgid "Proceed to payment"
-msgstr "Procéder au paiement"
-
-#: ../tempcache/stripe_form_amount.html.twig:254
-msgid "No payment reasons are available."
-msgstr "Aucun motif de paiement n'est disponible."
-
-#: ../tempcache/stripe_form_amount.html.twig:296
-msgid "You have to select an option."
-msgstr "Vous devez sélectionner une option."
-
-#: ../tempcache/stripe_form_amount.html.twig:305
-msgid "Please enter an amount."
-msgstr "Veuillez entrer un montant."
+#: ../tempcache/stripe_success.html.twig:62
+msgid ""
+"Your payment has succeeded. You will receive an email from Stripe with "
+"details."
+msgstr ""
+"Votre paiement a été effectué avec succès. Vous allez recevoir un courriel "
+"de Stripe en contenant les détails."
 
 #: ../tempcache/stripe_history.html.twig:89
-#: ../tempcache/stripe_history.html.twig:251
+#: ../tempcache/stripe_history.html.twig:244
 msgid "Request"
 msgstr "Requête"
 
-#: ../tempcache/stripe_history.html.twig:158
-#: ../tempcache/stripe_history.html.twig:163
+#: ../tempcache/stripe_history.html.twig:151
+#: ../tempcache/stripe_history.html.twig:156
 msgid "Duplicate"
 msgstr "Doublon"
 
-#: ../tempcache/stripe_history.html.twig:207
+#: ../tempcache/stripe_history.html.twig:195
 msgid "No request or unable to read request."
 msgstr "Pas de requête ou impossible de lire la requête."
 
-#: ../tempcache/stripe_history.html.twig:257
+#: ../tempcache/stripe_history.html.twig:215
+msgid "Payment nb."
+msgstr "Paiement n°"
+
+#: ../tempcache/stripe_history.html.twig:250
 msgid "Show/hide full request"
 msgstr "Afficher/Masquer la requête complète"
 
-#: ../tempcache/stripe_form_checkout.html.twig:149
-msgid "Payment details"
-msgstr "Informations de paiement"
+#: ../tempcache/stripe_form.html.twig:71
+msgid "Payment reason"
+msgstr "Motif de paiement"
 
-#: ../tempcache/stripe_form_checkout.html.twig:156
-msgid "Card number"
-msgstr "Numéro de carte"
+#: ../tempcache/stripe_form.html.twig:78
+msgid "Select an payment reason"
+msgstr "Sélectionnez un motif de paiement"
 
-#: ../tempcache/stripe_form_checkout.html.twig:163
-msgid "Expiration"
-msgstr "Date d'expiration"
+#: ../tempcache/stripe_form.html.twig:185
+msgid "Proceed to payment"
+msgstr "Procéder au paiement"
 
-#: ../tempcache/stripe_form_checkout.html.twig:170
-msgid "CVC"
-msgstr "CVC"
+#: ../tempcache/stripe_form.html.twig:201
+msgid "No payment reasons are available."
+msgstr "Aucun motif de paiement n'est disponible."
 
-#: ../tempcache/stripe_form_checkout.html.twig:178
-msgid "Pay"
-msgstr "Payer"
+#: ../tempcache/stripe_form.html.twig:243
+msgid "You have to select an option."
+msgstr "Vous devez sélectionner une option."
 
-#: ../tempcache/stripe_form_checkout.html.twig:327
-msgid ""
-"Your payment was successful. You may receive a mail from Stripe with details."
-msgstr ""
-"Votre paiement a été effectué avec succès. Vous devriez recevoir un courriel "
-"de Stripe en contenant les détails."
+#: ../tempcache/stripe_form.html.twig:252
+msgid "Please enter an amount."
+msgstr "Veuillez entrer un montant."
 
 #: ../tempcache/stripe_preferences.html.twig:72
 msgid "Cannot load the settings"
